--- a/client2/package.json
+++ b/client2/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
     "jodit-react": "^1.2.23",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
